Overflow bug fix attempt

--- a/src/index.css
+++ b/src/index.css
@@ -247,7 +247,8 @@ li{
 
   .App{
     width: auto;
-    height: auto;
+    height: 100vh;
+    overflow: hidden;
   }
 }
 
